- DateTimeField.getDurationField() / DateTimeField.getRangeDurationField() [#92,#93,#95]
  Previously some of the complex cases were wrong, notably around centuries and eras
  For example, yearOfEra() returned a range of null when it should be eras()
  A slew of tests were added and a variety of bugs fixed
  This affects DateTimeField.getDurationField() and DateTimeField.getRangeDurationField()

- DateTimeUtils.isContiguous(ReadablePartial) [#89]
  The isContiguous() method could throw a NullPointerException when evaluating weird partials

- Period.normalizedStandard(PeriodType) [#79]
  Fix handling of PeriodType when either years or months missing

- Partial.with(DateTimeFieldType,int) [#88]
  Validation in this method was not as thorough as that in the constructor
  This allowed invalid partials to be created

- MutableDateTime.add(DateTimeFieldType,int), addDays(int) and friends [#77]
  Adding zero to a MutableDateTime used to change the offset during DST overlap in autumn/fall
  This is now fixed to not change the offset

- DateTime/MutableDateTime constructors taking millis now validate [#100]
  Previously, new DateTime(Long.MAX_VALUE) would be accepted, now it will be rejected
  This ensures that the maximum/minimum year are respected

- Ensure isLeap() returns correct result for day fields [#110]
  Day-of-month and day-of-year fields should report leap days

- Insist that year > weekyear when creating Partial [#96,#98]
  As these compare equal code previously allowed either order

- Handle weird TimeZone implementations with null ID [#133]
  Calling DateTimeZone.forTimeZone() would break if the ID was null

- Handle broken Android implementations better [#103]
  Apparently some Android implementations throw ClassCastException when comparing different types
  Thats dumb and wrong but the change to handle it is harmless

- Better concurrency in parsing [#101]

- Better Javadoc for parsing of numbers in format patterns [#60]
