@@ -258,7 +258,9 @@ public abstract class BaseChronology
             for (int i = 0; i < size; i++) {
                 DurationField field = period.getFieldType(i).getField(this);
                 int value = field.getDifference(endInstant, startInstant);
-                startInstant = field.add(startInstant, value);
+                if (value != 0) {
+                    startInstant = field.add(startInstant, value);
+                }
                 values[i] = value;
             }
         }
